// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConsentSettingsLink with children renders link with custom text 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2F75D7;
}

.emotion-0:hover:not(:disabled) {
  color: #2F75D7;
}

.emotion-0:active:not(:disabled) {
  color: #2F75D7;
}

.emotion-0:visited:not(:disabled) {
  color: #903D91;
}

<a
    class="emotion-0"
    href="#"
    role="button"
  >
    Some Custom Link Text
  </a>
</DocumentFragment>
`;

exports[`ConsentSettingsLink with link props renders link with styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2F75D7;
}

.emotion-0:hover:not(:disabled) {
  color: #2F75D7;
}

.emotion-0:active:not(:disabled) {
  color: #2F75D7;
}

.emotion-0:visited:not(:disabled) {
  color: #903D91;
}

<a
    class="emotion-0"
    href="#"
    role="button"
  >
    Some Custom Link Text With Styles
  </a>
</DocumentFragment>
`;

exports[`ConsentSettingsLink with no children renders link with default text 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2F75D7;
}

.emotion-0:hover:not(:disabled) {
  color: #2F75D7;
}

.emotion-0:active:not(:disabled) {
  color: #2F75D7;
}

.emotion-0:visited:not(:disabled) {
  color: #903D91;
}

<a
    class="emotion-0"
    href="#"
    role="button"
  >
    Manage Consent
  </a>
</DocumentFragment>
`;
